consulta con groupby con múltiples campos

--- a/clase_6/DocumentDatabase/pymongo.ipynb
+++ b/clase_6/DocumentDatabase/pymongo.ipynb
@@ -318,6 +318,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "misma consulta pero agrupando por id de película y por título"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = db.movies.aggregate([\n",
+    "    {\"$match\": {\"num_mflix_comments\":{\"$gt\":2}}}, \n",
+    "    {\"$lookup\": {\"from\":\"comments\", \"localField\":\"_id\", \"foreignField\":\"movie_id\", \"as\":\"movie_comments\"}}, \n",
+    "    {\"$limit\":5}, \n",
+    "    {\"$unwind\": \"$movie_comments\"}, \n",
+    "    {\"$group\": {\"_id\":{\"id\":\"$_id\", \"title\":\"$title\"},\"count\":{\"$sum\":1}}}\n",
+    "    ])\n",
+    "\n",
+    "for result in results:\n",
+    "    print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Usando la agregación, encuentra el número total de películas que tiene cada director."
    ]
   },
